@@ -1,3 +1,7 @@
+2005-05-31 12:50 Mike Park  <mike.park@nasa.gov>
+
+	* src/grid.c (gridWriteTecplotTriangleZone) dump arrays to tecplot file.
+
 2005-05-29 15:35 Mike Park  <mike.park@nasa.gov>
 
 	* src/unit_main.c (gridNumberOfInvalidCells) count invalid cells and
